apps/copyparty/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: copyparty
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  selector:
    matchLabels:
      app.kubernetes.io/instance: copyparty
      app.kubernetes.io/name: copyparty
  serviceName: copyparty
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: copyparty
        app.kubernetes.io/name: copyparty
    spec:
      containers:
        - name: copyparty
          image: copyparty
          resources:
            requests:
              memory: 4Gi
              cpu: 25m
          livenessProbe:
            httpGet:
              path: /?reset=/._
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 3923
          readinessProbe:
            httpGet:
              path: /?reset=/._
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 180
            httpGet:
              path: /?reset=/._
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /cfg
            - name: startup-config
              mountPath: /cfg/config.conf
              readOnly: true
              subPath: config.conf
      volumes:
        - name: startup-config
          configMap:
            name: copyparty
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
