apps/copyparty/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: copyparty
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      appProtocol: http
      port: 3923
      targetPort: http
  selector:
    app.kubernetes.io/instance: copyparty
    app.kubernetes.io/name: copyparty
