apps/copyparty/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: copyparty
spec:
  rules:
    - backendRefs:
        - name: copyparty
          port: 3923
      # mid-body.
      timeouts:
        request: 0s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: copyparty-health
spec:
  rules:
    - matches:
        - path:
            type: Exact
            value: /health
      backendRefs:
        - name: copyparty
          port: 3923
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: copyparty-redirect
spec:
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
